# keyberon

./: .gitignore  .travis.yml  BUILDING.md  CHANGELOG.md  Cargo.toml  Dockerfile  KEYBOARDS.md  README.md  memory.x  openocd.gdb
.cargo/: config
cad/: Makefile  back.printing.scad  back.stl  blue-pill.scad  case.printing.scad  case.scad  case.stl  key-switch-down.printing.scad  key-switch-down.stl  key-switch-up.printing.scad  key-switch-up.stl  key.scad  keycap.printing.scad  keycap.stl  left-back.printing.scad  left-back.stl  left-case.printing.scad  left-case.stl  printing.scad  right-back.printing.scad  right-back.stl  right-case.printing.scad  right-case.stl  utils.scad
examples/: keyberon48.rs  keyberon60.rs  keyberon75.rs
keyberon-macros/: Cargo.toml
keyberon-macros/src/: lib.rs
keyberon-macros/tests/: mod.rs
layout-macro/: Cargo.toml
layout-macro/src/: lib.rs
layout-macro/tests/: mod.rs
src/: #hid.rs#  action.rs  cdc_acm.rs  chording.rs  combo.rs  debounce.rs  hid.rs  key_code.rs  keyboard.rs  layout.rs  lib.rs  main.rs  matrix.rs
