[package]
name = "keyberon"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>", "Robin Krahl <robin.krahl@ireas.org>"]
edition = "2018"

[dependencies]
either = { version = "1.5", default-features = false }
generic-array = "0.13"
embedded-hal = { version = "0.2", features = ["unproven"] }
usb-device = "0.2.0"
heapless = "0.5"
arraydeque = { version = "0.4.5", default-features = false }
