[package]
name = "keyberon"
version = "0.2.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>", "Robin Krahl <robin.krahl@ireas.org>"]
edition = "2018"
description = "Pure Rust keyboard firmware."
documentation = "https://docs.rs/keyberon"
repository = "https://github.com/TeXitoi/keyberon"
keywords = ["keyboard", "usb-device", "firmware"]
categories = ["embedded", "no-std"]
license = "MIT"
readme = "README.md"

[dependencies]
layout-macro = { version = "0.1.0", path = "./layout-macro" }
either = { version = "1.6", default-features = false }
generic-array = "0.14"
embedded-hal = { version = "0.2", features = ["unproven"] }
usb-device = "0.2.0"
heapless = "0.5"
arraydeque = { version = "0.4.5", default-features = false }
