[package]
name = "keyberon"
version = "0.2.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>", "Robin Krahl <robin.krahl@ireas.org>"]
edition = "2018"
description = "Pure Rust keyboard firmware."
documentation = "https://docs.rs/keyberon"
repository = "https://github.com/TeXitoi/keyberon"
keywords = ["keyboard", "usb-device", "firmware"]
categories = ["embedded", "no-std"]
license = "MIT"
readme = "README.md"

[dependencies]
keyberon-macros = { version = "0.1.0", path = "./keyberon-macros" }
either = { version = "1.6", default-features = false }
embedded-hal = { version = "0.2", features = ["unproven"] }
usb-device = "0.3"
heapless = "0.7"
arraydeque = { version = "0.4.5", default-features = false }
